<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_secondary"
    tools:context=".screen.home.fragment.ExpenseFragment">

    <com.boilerplate.uikit.views.textviews.text20.TextViewBold20
        android:id="@+id/tv_expense"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_12"
        android:layout_marginTop="@dimen/margin_12"
        android:text="@string/expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.boilerplate.uikit.views.textviews.text12.TextViewBold12
        android:id="@+id/tv_month_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_12"
        android:layout_marginEnd="@dimen/margin_8"
        android:background="@drawable/transparent_border_button_4"
        android:drawableStart="@drawable/ic_calendar"
        android:drawableEnd="@drawable/ic_chevron_down"
        android:drawablePadding="@dimen/margin_4"
        android:gravity="center"
        android:paddingHorizontal="@dimen/margin_6"
        android:paddingVertical="@dimen/margin_2"
        android:textSize="@dimen/text_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="@dimen/margin_12" />

    <com.boilerplate.uikit.views.textviews.text16.TextViewBold16
        android:id="@+id/tv_add_first_entry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/add_your_first_entry"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/iv_arrow"
        app:layout_constraintEnd_toEndOf="@+id/btn_cash_out"
        app:layout_constraintStart_toStartOf="@+id/btn_cash_out" />

    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_8"
        android:src="@drawable/ic_arrow_down"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/btn_cash_out"
        app:layout_constraintEnd_toEndOf="@+id/btn_cash_out"
        app:layout_constraintStart_toStartOf="@+id/btn_cash_out" />

    <EditText
        android:id="@+id/et_search_expense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_12"
        android:layout_marginVertical="@dimen/margin_16"
        android:background="@drawable/rounded_border_edittext_background_100"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/margin_8"
        android:gravity="center_vertical"
        android:hint="@string/search_by_expense_name"
        android:inputType="textPersonName"
        android:padding="@dimen/margin_10"
        android:textColorHint="@color/hint_text_color"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_expense" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_cash_out"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_search_expense">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:background="@drawable/bg_rounded_white_12"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/margin_8"
                android:paddingTop="@dimen/margin_8">

        <LinearLayout
            android:id="@+id/ll_stats_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.boilerplate.uikit.views.textviews.text10.TextViewHintBold10
                    android:id="@+id/tv_entries_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_entries"
                    android:textAllCaps="true" />

                <com.boilerplate.uikit.views.textviews.text16.TextViewBold16
                    android:id="@+id/tv_total_entries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_4"
                    android:text="@string/_0" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/margin_1"
                android:layout_height="match_parent"
                android:background="@color/divider_color"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <com.boilerplate.uikit.views.textviews.text10.TextViewHintBold10
                    android:id="@+id/tv_cash_out_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/total_out"
                    android:textAllCaps="true" />

                <com.boilerplate.uikit.views.textviews.text16.TextViewBoldError16
                    android:id="@+id/tv_total_cash_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/margin_4"
                    android:text="@string/_rupee_0" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:layout_marginTop="@dimen/margin_8"
            android:background="@color/divider_color" />

        <com.boilerplate.uikit.views.textviews.text14.TextViewBoldPrimaryColor14
            android:id="@+id/tv_view_reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="@dimen/margin_8"
            android:text="@string/view_reports" />
            </LinearLayout>

            <!-- Table Header -->
            <LinearLayout
                android:id="@+id/ll_table_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_4"
                android:layout_marginTop="@dimen/margin_12"
                android:orientation="horizontal"
                android:background="@color/white"
                android:visibility="gone">

        <!-- Date Column Header -->
        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="@string/date"
            android:paddingVertical="@dimen/margin_8"/>

        <View
            android:layout_width="@dimen/margin_1"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

        <!-- Notes Column Header -->
        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="start|center_vertical"
            android:paddingHorizontal="@dimen/margin_8"
            android:paddingVertical="@dimen/margin_8"
            android:text="@string/notes" />

        <View
            android:layout_width="@dimen/margin_1"
            android:layout_height="match_parent"
            android:background="@color/divider_color" />

        <!-- Amount Column Header -->
        <com.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:gravity="start|center_vertical"
            android:paddingStart="@dimen/margin_8"
            android:paddingVertical="@dimen/margin_8"
            android:text="@string/rupee_amount" />
            </LinearLayout>

            <View
                android:id="@+id/divider_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_1"
                android:layout_marginHorizontal="@dimen/margin_12"
                android:background="@color/divider_color"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_expense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/margin_4"
                android:layout_marginTop="0dp"
                android:visibility="gone"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:paddingBottom="@dimen/margin_40"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="false" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.boilerplate.uikit.views.buttons.RoundedRedButton
        android:id="@+id/btn_cash_out"
        android:layout_width="@dimen/margin_150"
        android:layout_height="wrap_content"
        android:text="@string/cash_out"
        android:textAllCaps="true"
        app:icon="@drawable/ic_cash_out"
        app:iconPadding="@dimen/margin_6"
        android:layout_margin="@dimen/margin_16"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nested_scroll_view" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>