<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_12"
        android:layout_marginVertical="@dimen/margin_8"
        android:background="@drawable/circle_bg_white"
        android:contentDescription="@string/close"
        android:padding="@dimen/margin_8"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@+id/cl_attendance"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_attendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_top_edittext_background_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:context=".screen.attendance.AttendanceMarkBottomsheetFragment">

        <co.dailybook.boilerplate.uikit.views.textviews.text20.TextViewBold20
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_20"
            android:ellipsize="end"
            app:layout_constraintEnd_toStartOf="@+id/tv_date"
            app:layout_constraintBottom_toTopOf="@+id/rl_amount"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <co.dailybook.boilerplate.uikit.views.textviews.text14.TextViewBold14
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_8"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_20"
            app:layout_constraintBottom_toTopOf="@+id/rl_amount"
            app:layout_constraintEnd_toStartOf="@+id/tv_date_edit"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Jan 03, 2024"/>

        <TextView
            android:id="@+id/tv_date_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/edit"
            android:textColor="@color/color_primary"
            android:textSize="@dimen/text_14"
            style="@style/textview_bold_primary_color_14"
            android:layout_marginBottom="@dimen/margin_20"
            app:layout_constraintBottom_toTopOf="@+id/rl_amount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rl_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_20"
            app:layout_constraintBottom_toTopOf="@+id/divider_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <co.dailybook.boilerplate.uikit.views.textviews.text48.TextViewBoldPrimaryColor48
                android:id="@+id/rupee_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingEnd="8dp"
                android:text="@string/rupee"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_8"
                android:background="@android:color/transparent"
                android:hint="@string/_0"
                android:textColorHint="@color/hint_text_color"
                android:gravity="start"
                android:inputType="number"
                android:padding="0dp"
                android:textSize="48sp"
                android:textStyle="bold"
                android:maxLength="10"
                app:layout_constraintStart_toEndOf="@id/rupee_symbol"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

            <LinearLayout
                android:id="@+id/ll_payment_method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:background="@drawable/toggle_button_container"
                android:padding="@dimen/margin_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent">

                <TextView
                    android:id="@+id/rb_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="45dp"
                    android:minHeight="28dp"
                    android:layout_marginEnd="@dimen/margin_2"
                    android:background="@drawable/toggle_button_left"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/margin_10"
                    android:paddingVertical="@dimen/margin_4"
                    android:tag="online"
                    android:text="@string/online"
                    android:textColor="@color/color_primary"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true" />

                <TextView
                    android:id="@+id/rb_cash"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:minWidth="45dp"
                    android:minHeight="28dp"
                    android:layout_marginStart="@dimen/margin_2"
                    android:background="@drawable/toggle_button_right_selected"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/margin_10"
                    android:paddingVertical="@dimen/margin_4"
                    android:tag="cash"
                    android:text="@string/cash"
                    android:textColor="@android:color/white"
                    android:textSize="11sp"
                    android:textStyle="bold"
                    android:clickable="true"
                    android:focusable="true" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toTopOf="@+id/et_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_40"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:background="@drawable/rounded_border_edittext_background_100"
            android:hint="@string/eg_food_petrol_rent"
            android:padding="@dimen/margin_10"
            android:textSize="@dimen/text_14"
            android:inputType="textShortMessage"
            android:textColorHint="@color/hint_text_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/divider_2"/>

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_1"
            android:layout_marginBottom="@dimen/margin_8"
            android:background="@color/divider_color"
            app:layout_constraintBottom_toTopOf="@+id/btn_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <co.dailybook.boilerplate.uikit.views.textviews.text14.TextViewBoldError14
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingVertical="@dimen/margin_13"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_16"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            android:text="@string/delete_entry"
            android:background="@drawable/rounded_border_button_error_100"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <co.dailybook.boilerplate.uikit.views.buttons.PrimaryButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginBottom="@dimen/margin_16"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_delete"
            app:layout_constraintHorizontal_chainStyle="packed"/>

        <ProgressBar
            android:id="@+id/pb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>